# dealii-cmake-superbuild

./: CMakeLists.txt  README.md
config/: do_configure_cmake.sh
macros/: CMakeLists.txt  append_cmake_prefix_path.cmake  build_applications.cmake  build_autotools_git_subproject.cmake  build_autotools_subproject.cmake  build_cmake_git_subproject.cmake  build_cmake_subproject.cmake  build_packages.cmake  print.cmake  print_config_summary.cmake  set_packages_and_dependencies.cmake  setup_subproject_path_vars.cmake
macros/applications/: CMakeLists.txt  aspect.cmake
