include(print.cmake)
include(append_cmake_prefix_path.cmake)
include(setup_subproject_path_vars.cmake)
include(set_packages_and_dependencies.cmake)
include(build_autotools_subproject.cmake)
include(build_autotools_git_subproject.cmake)
include(build_cmake_subproject.cmake)
include(build_cmake_git_subproject.cmake)
include(build_packages.cmake)
include(build_applications.cmake)
include(print_config_summary.cmake)
add_subdirectory(packages)
add_subdirectory(applications)